Resources/public/css/layout.css
/*body{*/
    /*padding-top: 50px;*/
/*}*/

/*@media (max-width: 978px) {*/
    /*body{*/
        /*padding-top: 0;*/
    /*}*/
/*}*/

div.border {
    border: 1px solid #DDDDDD;
    border-radius: 6px 6px 6px 6px;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
}

div.connection {
    position: absolute;
    left: 50%;
    top: 35%;
    width: 460px;
    margin: -130px 0 0 -250px;
    box-shadow: 2px 2px 10px #ccc;
    border: 1px solid #ddd;
    border-radius: 6px;
}

div.connection .control-group {
    padding: 0 20px 0 20px;
}

div.connection .alert {
    margin: 0 20px 20px 20px;
}

div.connection form {
    padding-top: 15px;
    margin-bottom: 0px;
}

div.connection form .form-actions {
    margin-bottom: 0px;
}

div.connection .form-actions {
    padding-left: 20px;
}

div.connection div input.big {
    height: 35px;
    font-size: 25px;
}

.sonata-bc.sonata-ba-no-side-menu div.container-fluid > div.content {
    margin-left: 0px;
}



div.sonata-ba-field-inline-table input.title {
    width: 100px;
}

div.sonata-ba-field-inline-table textarea.title {
    width: 150px;
    height: 50px;
}

h4.filter_legend table {
    margin: 10px 0;
}


.table-striped tbody tr.sonata-ba-list-row-selected td, .table-striped tbody tr.sonata-ba-list-row-selected th {
    background-color: #E3F7FE;
}

table.sonata-ba-list td img {
    vertical-align: bottom
}

td.pager ul {
    float: left;
    list-style: none;
    margin: 2px;
    margin-left: auto;
    margin-right: auto;
}

td.pager ul li {
    float: left;
}

td.pager ul li a {
    border: 1px solid #cccccc;
    line-height: 25px;
    padding: 1px 8px 1px 8px;
    margin: 2px;
}

div.sonata-actions {
    /*margin-top: 18px;*/
    float: right
}

.sonata-ba-list td.sonata-ba-list-field a.sonata-link-identifier {
    font-weight: bold;
}

.sonata-ba-list tr:hover td.sonata-ba-list-field.sonata-ba-list-field-select a {
    visibility: visible;
}

td.sonata-ba-list-field.sonata-ba-list-field-boolean i {
    margin-right: 1ex;
}
td.sonata-ba-list-field.sonata-ba-list-field-boolean a:hover {
    text-decoration: none;
}

td.sonata-ba-list-field.sonata-ba-list-field-currency,
td.sonata-ba-list-field.sonata-ba-list-field-percent,
td.sonata-ba-list-field.sonata-ba-list-field-integer {
    text-align: right;
}

td.sonata-ba-list-field.sonata-ba-list-field-select {
    text-align: center;
}
td.sonata-ba-list-field.sonata-ba-list-field-select a {
    visibility: hidden;
}

div.sonata-ba-modal-edit-one-to-one td.sonata-ba-list-field-batch,
div.sonata-ba-modal-edit-one-to-one div.sonata-ba-list-actions,
div.sonata-ba-modal-edit-one-to-one th.sonata-ba-list-field-header-batch {
    display: none;
}

div.sonata-ba-modal-edit-one-to-one div.sonata-ba-list-actions {
    display: none;
}

th.sonata-ba-list-field-header-order-desc a,
th.sonata-ba-list-field-header-order-asc a {
    position: relative;
    margin-right: 10px;
}

th.sonata-ba-list-field-header-order-asc a:hover:before,
th.sonata-ba-list-field-header-order-asc.sonata-ba-list-field-order-active a:before,
th.sonata-ba-list-field-header-order-desc.sonata-ba-list-field-order-active a:hover:before {
    content: "";
    display: block;
    border-top: 4px solid black;
    border-right: 4px solid transparent;
    border-left: 4px solid transparent;
    border-bottom: 4px solid transparent;
    position: absolute;
    top: 50%;
    right: -10px;
    margin-top: -1px;
}

th.sonata-ba-list-field-header-order-desc a:hover:before,
th.sonata-ba-list-field-header-order-desc.sonata-ba-list-field-order-active a:before,
th.sonata-ba-list-field-header-order-asc.sonata-ba-list-field-order-active a:hover:before {
    content: "";
    display: block;
    border-bottom: 4px solid black;
    border-right: 4px solid transparent;
    border-left: 4px solid transparent;
    border-top: 4px solid transparent;
    position: absolute;
    top: 50%;
    right: -10px;
    margin-top: -5px;
}

em.sonata-ba-field-help {
    display: block;
    color: #999;
    margin-bottom: 10px;
}

fieldset legend {
    padding-left: 0px;
}

select.sonata-medium, textarea.sonata-medium, input.sonata-medium {
    width: 400px;
}

textarea.sonata-medium {
    height: 125px;
}

div.sonata-medium-date {
    overflow: hidden;
}

div.sonata-medium-date select {
    width: 85px;
}

div.sonata-medium-date div {
    float: left;
}

.sonata-ba-field-inline-table select.sonata-medium,
.sonata-ba-field-inline-table textarea.sonata-medium,
.sonata-ba-field-inline-table input.sonata-medium {
    width: 150px;
}

.sonata-ba-view-title {
    font-size: 19px;
    line-height: 1;
    color: #404040;
    *padding: 0 0 5px 0;
    *line-height: 1.5;
}

.sonata-ba-view-title td, .sonata-ba-view-title th {
    border: 0;
}

.sonata-ba-view-container th {
    width: 130px;
}

.sonata-ba-view-container td, .sonata-ba-view-container th {
    border-bottom: 0;
    border-top: 1px solid #eee;
}

.sonata-ba-view-container:nth-child(2n) td, .sonata-ba-view-container:nth-child(2n) th {
    background-color: #f9f9f9;
}

.sonata-ba-view-container:nth-child(2n):hover td, .sonata-ba-view-container:nth-child(2n):hover th {
    background-color: #f5f5f5;
}

.sonata-ba-view-container.history-audit-compare th {
     width: 10%;
}

.sonata-ba-view-container.history-audit-compare td {
     width: 40%;
}
.sonata-ba-view-container.history-audit-compare th.diff {
     background: pink;
}

.container-fluid > .sidebar {
    top: auto;
}

.sonata-action-element.btn-group {
    display: inline-block;
    padding: 4px 10px 4px;
    vertical-align: middle;
}

.sonata-collection-delete {
    float: left;
}

.no-js .sonata-collection-add, .no-js .sonata-collection-delete {
    display: none;
}

.form-horizontal .sonata-collection-row-without-label {
    margin-left: 0;
}

ul.inputs-list {
    padding-left: 150px;
}

legend + .sonata-ba-collapsed-fields {
    margin-top: 18px;
    -webkit-margin-top-collapse: separate;
}

legend.sonata-ba-fieldset-collapsed-description + .sonata-ba-collapsed-fields {
    margin-top: 0;
}

.sonata-ba-collapsed-fields > p {
    margin-bottom: 18px;
}

.bordered-table tbody.ui-sortable tr {
    cursor: move;
}

.sonata-ba-fieldset-collapsed legend:before {
    content: '+ ';
}

.sonata-ba-collapsed-fields-close legend:before {
    content: '- ';
    padding-left: 5px;
}

.sonata-preview-form-container fieldset, .sonata-preview-form-container .tabbable {
    display: none;
}

.pagination {
    margin: 0px;
}

.field-short-description {
    min-width: 250px;
    min-height: 18px;
    display: block;
    float: left;
    background: #fefefe;
    border: 1px solid #e9e9e9;
    border-radius: 4px 4px 4px 4px;
    list-style: none outside none;
    margin: 0 15px 0 0;
    padding: 4px 15px;
}

.inner-field-short-description {

}

.required:after {
    content: '*';
}

.form-horizontal .control-group {
    margin-bottom: 10px;
}

.box .box-body {
    overflow: hidden;
}

